--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "prop-types": "^15.6.0",
     "react": "^15.5.4 || ^16.0.0 || ^17.0.0",
     "react-dom": "^15.5.4 || ^16.0.0 || ^17.0.0",
-    "react-router-dom": "^4.1.1 || ^5.0.1"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
@@ -63,10 +63,10 @@
     "@testing-library/react-hooks": "^7.0.0",
     "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^24.0.15",
+    "@types/lodash": "^4.14.182",
     "@types/prop-types": "^15.7.1",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
-    "@types/react-router-dom": "^4.3.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
@@ -86,7 +86,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^6.3.0",
     "react-test-renderer": "16.8.6",
     "serve": "^11.0.2",
     "ts-jest": "^24.0.2",
@@ -96,5 +96,8 @@
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
