--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "test:coverage": "jest --config=jest.config.json --coverage",
     "lint": "eslint . --ext .js",
     "ci": "run-p lint build test:coverage",
-    "postci": "cat ./coverage/lcov.info | coveralls"
+    "postci": "cat ./coverage/lcov.info | coveralls",
+    "postinstall": "npm run build"
   },
   "peerDependencies": {
     "prop-types": "^15.6.0",
